# CafsPy

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish-to-pypi.yml  release.yml
data/: algarrobo.csv
src/cafspy/: module.py
tests/: test_module.py
